--- a/papers/templates/components/navbar-no-search.html
+++ b/papers/templates/components/navbar-no-search.html
@@ -1,23 +1,56 @@
-<nav class="bg-white p-4 text-black">
-  <div class="container mx-auto flex flex-col sm:flex-row sm:justify-between sm:items-center gap-4 py-2">
+<nav class="bg-white p-4 shadow">
+  <div class="container mx-auto flex items-center justify-between">
+
     <!-- Logo -->
     <a href="/" class="font-bold text-xl">Academic Repo</a>
 
+    <!-- Search -->
 
-    <!-- Nav Links -->
-    <ul class="flex flex-wrap justify-center sm:justify-end items-center gap-4 text-sm">
-      <li><a href="{% url 'saved_papers' %}" class="hover:underline">Library</a></li>
-      <li><a href="{% url 'home' %}" class="hover:underline">Home</a></li>
-      <li><a href="{% url 'paper_list' %}" class="hover:underline">Papers</a></li>
-      <li><a href="{% url 'paper_upload' %}" class="hover:underline">Upload</a></li>
-      {% if user.is_authenticated %}
-      <li><a href="{% url 'profile_page' %}" class="hover:underline">Hi, {{ user.username }}</a></li>
+    <!-- Mobile Menu / Login -->
+    {% if user.is_authenticated %}
+      <!-- Logged in: Hamburger menu -->
+      <div x-data="{ open: false }" class="relative sm:hidden">
+        <button @click="open = !open" class="btn btn-square btn-ghost">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
 
+        <div x-show="open" x-transition class="absolute right-0 mt-2 w-48 bg-white border rounded shadow-lg z-50 flex flex-col">
+          <a href="{% url 'saved_papers' %}" class="px-4 py-2 hover:bg-gray-100">Library</a>
+          <a href="{% url 'home' %}" class="px-4 py-2 hover:bg-gray-100">Home</a>
+          <a href="{% url 'paper_list' %}" class="px-4 py-2 hover:bg-gray-100">Papers</a>
+          <a href="{% url 'paper_upload' %}" class="px-4 py-2 hover:bg-gray-100">Upload</a>
+          <a href="{% url 'profile_page' %}" class="px-4 py-2 hover:bg-gray-100">Hi, {{ user.username }}</a>
+          <a href="{% url 'account_logout' %}" class="px-4 py-2 hover:bg-gray-100">Logout</a>
+        </div>
+      </div>
+
+      <!-- Desktop Links -->
+      <ul class="hidden sm:flex gap-4 text-sm">
+        <li><a href="{% url 'saved_papers' %}" class="hover:underline">Library</a></li>
+        <li><a href="{% url 'home' %}" class="hover:underline">Home</a></li>
+        <li><a href="{% url 'paper_list' %}" class="hover:underline">Papers</a></li>
+        <li><a href="{% url 'paper_upload' %}" class="hover:underline">Upload</a></li>
+        <li><a href="{% url 'profile_page' %}" class="hover:underline">Hi, {{ user.username }}</a></li>
         <li><a href="{% url 'account_logout' %}" class="hover:underline">Logout</a></li>
-      {% else %}
+      </ul>
+    {% else %}
+      <!-- Not logged in: show login button only on mobile -->
+      <a href="{% url 'account_login' %}" class="btn btn-sm btn-primary sm:hidden">Login</a>
+
+      <!-- Desktop links -->
+      <ul class="hidden sm:flex gap-4 text-sm">
+        <li><a href="{% url 'saved_papers' %}" class="hover:underline">Library</a></li>
+        <li><a href="{% url 'home' %}" class="hover:underline">Home</a></li>
+        <li><a href="{% url 'paper_list' %}" class="hover:underline">Papers</a></li>
+        <li><a href="{% url 'paper_upload' %}" class="hover:underline">Upload</a></li>
         <li><a href="{% url 'account_login' %}" class="hover:underline">Login</a></li>
         <li><a href="{% url 'account_signup' %}" class="hover:underline">Register</a></li>
-      {% endif %}
-    </ul>
+      </ul>
+    {% endif %}
+
   </div>
 </nav>
