--- a/papers/templates/papers/paper_upload.html
+++ b/papers/templates/papers/paper_upload.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="bg-white rounded-lg shadow p-6" x-data="{ subTab: 'uploaded' }">
+<div class="" x-data="{ subTab: 'uploaded' }">
   <h2 class="text-lg font-semibold text-gray-900 mb-4">Upload Section</h2>
 
   <!-- DaisyUI Tabs -->
